--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "autoprefixer": "10.4.0",
     "browser-sync": "2.27.7",
     "del": "^6.1.1",
-    "gulp": "4.0.2",
+    "gulp": "^4.0.2",
     "gulp-htmlmin": "^5.0.1",
     "gulp-less": "5.0.0",
-    "gulp-libsquoosh": "^1.1.2",
+    "gulp-libsquoosh": "^1.0.12",
     "gulp-plumber": "1.2.1",
     "gulp-postcss": "9.0.1",
     "gulp-rename": "^2.0.0",
@@ -47,5 +47,8 @@
   "engines": {
     "node": "^16"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "gulp-cli": "^2.3.0"
+  }
 }
